# burnt-ends

./: .gitignore  README.md  attention.ipynb  confusion_matrix.ipynb  efficientnet.py  linear_classifier.ipynb  linear_svm.ipynb  pyproject.toml  requirements.txt  sim_poibin.ipynb  simple_example.ipynb  sklearn_to_torch.ipynb  sub_pixel_upsample.ipynb  temp.py  torch.ipynb
notebooks/: confusion_matrix.ipynb  image_compression.ipynb  linear_classifier.ipynb  receptive_field.ipynb  simple_example.ipynb  sklearn_to_torch.ipynb  sub_pixel_upsample.ipynb
requirements/: base.in  cpu.in  cuda.in
requirements/linux-py3.10/: base.txt  cpu.txt  cuda.txt
