[tool.poetry]
name = "torch-testing"
version = "0.1.0"
description = ""
authors = ["Zachary Coleman <zacharywcoleman@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
